# deig-ai-hackathon

./: README.md  gdelt.ipynb  geospatial.ipynb  requirements.txt
abap-1/: abap.ipynb
ad-ai-ux-main/: .gitignore  README.md  Staticfile  index.html  manifest.yml  package-lock.json  package.json
ad-ai-ux-main/src/: App.jsx  api.js  main.jsx
ai-boilerplate/: .env.example  README.md  ai_chat.py  requirements.txt
ai-boilerplate/tests/: test_ai_chat.py
canada/: cohere.ipynb
explosives/: EXP_AI_webapp.py  NEW_aggregation.ipynb  explosives.ipynb
explosives/data/: AMMO_IM_AI-V01.xlsx
explosives/explosives_api/: README.md  agent.py  api.py  manifest.yml  requirements.txt
finland/: finland.ipynb
germany/: germany.ipynb  warehouse.ipynb
mcp/: mcp.ipynb
msc/: sports_one.ipynb
netherlands/: netherlands.ipynb
norway/: .env.example  README.md  pyproject.toml  requirements.txt  run.py
norway/commons/: __init__.py
norway/commons/ai_core/: __init__.py  llm_client.py  llm_get_user_language.py
norway/commons/core/: __init__.py  config.py
norway/commons/hana/: __init__.py  hana_conn.py
norway/src/agent_jone/: __init__.py  api.py  config.py  engine.py  plan_validation.py  prompts.py  rules.yaml  task_routing.json
norway/src/agent_jone/utils/: __init__.py  sportsone_urls.py
oslo_hackathon_api/: .env  COHERE_ENDPOINTS.md  README.md  agent.py  agent_finland.py  api.py  german_agent.py  manifest.yml  requirements.txt  rpt.py  sweden_agent.py  uk_agent.py
rpt-1/: rpt_prod.ipynb  rpt_test.ipynb
ukraine/: gdelt_ua.ipynb  ua_knowledgegraph.ipynb
(+23 files in other folders)
