[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jone-agent"
version = "1.0.0"
description = "JONE - Norwegian HR Graph Agent for military force readiness"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Internal SAP Use"}

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.20",
    "hdbcli>=2.20.0",
    "hana-ml>=2.20.0",
    "generative-ai-hub-sdk>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "requests>=2.30.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[project.scripts]
jone = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commons*", "src*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501"]
